--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.delete_button {
+  vertical-align: middle;
+  margin-left: 10px;
+  width: 30px;
 }
